--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
-html{
+html, #containsMain{
   height: 100%;
 }
 
 body{
   text-align: center;
   height: 100%;
-  border: 1px solid black;
 }
 
 ul {
   padding: 0%;
   list-style-type: none;
+  margin: 0;
 }
 
 ul li{
@@ -28,14 +28,15 @@ ul li a:hover{
 
 .App {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  height: 82px;
+  padding-top: 20px;
   color: white;
 }
 
-main {
-  height: 80%;
-  border: 1px solid green;
+
+
+h2 {
+  padding-top: 20px;
 }
 
 footer {
@@ -45,5 +46,3 @@ footer {
   display: block;
   width: 100%;
 }
-
-
